update dashO deobfuscator